--- a/src/paint/_color.scss
+++ b/src/paint/_color.scss
@@ -2,7 +2,7 @@ $Linear-gradient: hsl(249, 99%, 64%) to hsl(278, 94%, 30%);
 $Red: hsl(0, 100%, 66%);
 $Red-dim: hsla(0, 92%, 66%, 0.349);
 $Blue: hsl(249, 99%, 64%);
-$Blue-dim: hsla(249, 99%, 64%, 0.301);
+$Blue-dim: hsl(278, 94%, 30%);
 $White: hsl(0, 0%, 100%);
 $Light-grayish-violet: hsl(270, 3%, 87%);
 $Dark-grayish-violet: hsl(279, 6%, 55%);
