regular expression correction on my validation for the form of the project

--- a/src/component/form/form.scss
+++ b/src/component/form/form.scss
@@ -1,6 +1,10 @@
 @import './../../paint/color';
 
 .my-form {
+    display: none;
+    &.show {
+        display: block;
+    }
     label {
         width: 100%;
         font-size: 20px;
